final step for data clean and finish the first step in data-preprocessing.

--- a/source/Data-Cleaning-02.ipynb
+++ b/source/Data-Cleaning-02.ipynb
@@ -747,7 +747,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "77378862",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -770,12 +772,22 @@
    "id": "0480d328",
    "metadata": {},
    "source": [
-    "## 4. Drop the rows ( 'review' is too short )"
+    "## 4. Drop the rows ( 'review' is too short or too long )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "59ee5dc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['review'] = df['review'].apply(lambda x: x.replace(' ', '').replace('\\n', ','))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "7cdae9d8",
    "metadata": {
     "scrolled": true
@@ -785,17 +797,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0        148\n",
-      "1        147\n",
-      "2        120\n",
-      "3         60\n",
-      "4        111\n",
+      "9412    1888\n",
+      "6575    1705\n",
+      "6486    1497\n",
+      "6580    1408\n",
+      "4115    1152\n",
       "        ... \n",
-      "11302     30\n",
-      "11303     98\n",
-      "11304    112\n",
-      "11305    149\n",
-      "11306    176\n",
+      "5209      13\n",
+      "9678      13\n",
+      "6407      13\n",
+      "6148      11\n",
+      "3892      11\n",
       "Name: review, Length: 11307, dtype: int64\n"
      ]
     }
@@ -804,19 +816,23 @@
     "# Create a new Pandas series called 'char_count_series' that calculates the number of characters in each row of the 'review' column in the DataFrame 'df'.\n",
     "char_count_series = df['review'].apply(lambda x: len(str(x)))\n",
     "\n",
-    "# Print the 'char_count_series' to display the number of characters for each row in the 'review' column.\n",
+    "# sort char_count_series in descending order\n",
+    "char_count_series = char_count_series.sort_values(ascending=False)\n",
+    "\n",
+    "# print the char_count_series\n",
     "print(char_count_series)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "edaad315",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Keep only the rows where the length of the 'review' column is greater than or equal to 10.\n",
-    "df = df[df['review'].str.len() >= 10]\n",
+    "df = df[df['review'].str.len() >= 20]\n",
+    "df = df[df['review'].str.len() <= 300]\n",
     "\n",
     "# Reset the index of the DataFrame 'df' after filtering.\n",
     "df = df.reset_index(drop=True)"
@@ -824,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "88dc174a",
    "metadata": {},
    "outputs": [
@@ -832,7 +848,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "共有 11307 条数据\n"
+      "共有 10484 条数据\n"
      ]
     }
    ],
@@ -854,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "501491d4",
    "metadata": {
     "scrolled": true
@@ -889,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "11192e0f",
    "metadata": {},
    "outputs": [
@@ -925,17 +941,17 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11013</th>\n",
+       "      <th>10211</th>\n",
        "      <td>1姜姜2</td>\n",
        "      <td>4.5</td>\n",
        "      <td>4.5</td>\n",
        "      <td>4.5</td>\n",
-       "      <td>东方新天地\\n位置～东长安街1号\\n距地铁1号线王府井站A东北囗步行220米\\n好久没来东方...</td>\n",
+       "      <td>东方新天地,位置～东长安街1号,距地铁1号线王府井站A东北囗步行220米,好久没来东方新天地...</td>\n",
        "      <td>2020-05-30 19:33:00</td>\n",
        "      <td>东方新天地</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6846</th>\n",
+       "      <th>6333</th>\n",
        "      <td>1姜姜2</td>\n",
        "      <td>4.5</td>\n",
        "      <td>4.5</td>\n",
@@ -945,34 +961,34 @@
        "      <td>王府中環</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4327</th>\n",
-       "      <td>45度搬砖宗</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>am+pm=apm 一座吃喝玩乐应有尽有的商场 网红小吃真的不少\\n奈雪的茶 最爱她家各种水...</td>\n",
-       "      <td>2020-02-15 10:18:00</td>\n",
-       "      <td>北京apm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6560</th>\n",
+       "      <th>6078</th>\n",
        "      <td>45度搬砖宗</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>期待已久的咖啡青年节终终终于来啦 还是在寸土寸金的王府中環 立刻double高大上了\\n🥛O...</td>\n",
+       "      <td>期待已久的咖啡青年节终终终于来啦还是在寸土寸金的王府中環立刻double高大上了,🥛OATL...</td>\n",
        "      <td>2020-09-16 18:51:00</td>\n",
        "      <td>王府中環</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2633</th>\n",
-       "      <td>81821727</td>\n",
+       "      <th>4036</th>\n",
+       "      <td>45度搬砖宗</td>\n",
        "      <td>4.5</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>4.5</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>现在可以逛的店不是很多，\\n主要的人气都是餐厅给的，\\n周末饭点各种排队，\\n幸好没有什么我...</td>\n",
-       "      <td>2020-12-19 21:13:00</td>\n",
+       "      <td>am+pm=apm一座吃喝玩乐应有尽有的商场网红小吃真的不少,奈雪的茶最爱她家各种水果味的冰...</td>\n",
+       "      <td>2020-02-15 10:18:00</td>\n",
        "      <td>北京apm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7519</th>\n",
+       "      <td>81821727</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>已经习惯了前两年北京过年人少，,今年烟火气终于回来了，旺旺旺！,大楼以前是过年大家买糖的地方...</td>\n",
+       "      <td>2023-01-29 21:36:00</td>\n",
+       "      <td>王府井百货</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -985,7 +1001,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3241</th>\n",
+       "      <th>3035</th>\n",
        "      <td>龙女的妈妈</td>\n",
        "      <td>4.5</td>\n",
        "      <td>4.5</td>\n",
@@ -995,7 +1011,7 @@
        "      <td>北京apm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8770</th>\n",
+       "      <th>8122</th>\n",
        "      <td>龙女的妈妈</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
@@ -1005,7 +1021,17 @@
        "      <td>王府井百货</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10182</th>\n",
+       "      <th>49</th>\n",
+       "      <td>龙飞凤舞</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>北京apm是知名地标之一。每次去都会发现一些变化，像川绝变脸一样，熟悉中有陌生，如首次出现在...</td>\n",
+       "      <td>2023-04-05 20:35:00</td>\n",
+       "      <td>北京apm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9436</th>\n",
        "      <td>龙飞凤舞</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
@@ -1015,7 +1041,7 @@
        "      <td>东方新天地</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4756</th>\n",
+       "      <th>4444</th>\n",
        "      <td>龙飞凤舞</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
@@ -1024,80 +1050,140 @@
        "      <td>2022-12-24 18:36:00</td>\n",
        "      <td>王府中環</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>龙飞凤舞</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>北京apm是知名地标之一。每次去都会发现一些变化，像川绝变脸一样，熟悉中有陌生，如首次出现在...</td>\n",
-       "      <td>2023-04-05 20:35:00</td>\n",
-       "      <td>北京apm</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2711 rows × 7 columns</p>\n",
+       "<p>2453 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "      user_name  facs_score  envr_score  serv_score  \\\n",
-       "11013      1姜姜2         4.5         4.5         4.5   \n",
-       "6846       1姜姜2         4.5         4.5         4.5   \n",
-       "4327     45度搬砖宗         4.5         4.0         4.5   \n",
-       "6560     45度搬砖宗         5.0         5.0         5.0   \n",
-       "2633   81821727         4.5         4.5         4.5   \n",
+       "10211      1姜姜2         4.5         4.5         4.5   \n",
+       "6333       1姜姜2         4.5         4.5         4.5   \n",
+       "6078     45度搬砖宗         5.0         5.0         5.0   \n",
+       "4036     45度搬砖宗         4.5         4.0         4.5   \n",
+       "7519   81821727         4.0         4.0         4.5   \n",
        "...         ...         ...         ...         ...   \n",
-       "3241      龙女的妈妈         4.5         4.5         4.5   \n",
-       "8770      龙女的妈妈         5.0         5.0         5.0   \n",
-       "10182      龙飞凤舞         5.0         5.0         5.0   \n",
-       "4756       龙飞凤舞         5.0         5.0         5.0   \n",
-       "53         龙飞凤舞         5.0         5.0         5.0   \n",
+       "3035      龙女的妈妈         4.5         4.5         4.5   \n",
+       "8122      龙女的妈妈         5.0         5.0         5.0   \n",
+       "49         龙飞凤舞         5.0         5.0         5.0   \n",
+       "9436       龙飞凤舞         5.0         5.0         5.0   \n",
+       "4444       龙飞凤舞         5.0         5.0         5.0   \n",
        "\n",
        "                                                  review                time  \\\n",
-       "11013  东方新天地\\n位置～东长安街1号\\n距地铁1号线王府井站A东北囗步行220米\\n好久没来东方... 2020-05-30 19:33:00   \n",
-       "6846   王府井到中环广场，我觉得这个商场有高档又接地气特别好逛的一个商场，尤其是对爱买、爱拍、爱吃、... 2020-08-06 21:38:00   \n",
-       "4327   am+pm=apm 一座吃喝玩乐应有尽有的商场 网红小吃真的不少\\n奈雪的茶 最爱她家各种水... 2020-02-15 10:18:00   \n",
-       "6560   期待已久的咖啡青年节终终终于来啦 还是在寸土寸金的王府中環 立刻double高大上了\\n🥛O... 2020-09-16 18:51:00   \n",
-       "2633   现在可以逛的店不是很多，\\n主要的人气都是餐厅给的，\\n周末饭点各种排队，\\n幸好没有什么我... 2020-12-19 21:13:00   \n",
+       "10211  东方新天地,位置～东长安街1号,距地铁1号线王府井站A东北囗步行220米,好久没来东方新天地... 2020-05-30 19:33:00   \n",
+       "6333   王府井到中环广场，我觉得这个商场有高档又接地气特别好逛的一个商场，尤其是对爱买、爱拍、爱吃、... 2020-08-06 21:38:00   \n",
+       "6078   期待已久的咖啡青年节终终终于来啦还是在寸土寸金的王府中環立刻double高大上了,🥛OATL... 2020-09-16 18:51:00   \n",
+       "4036   am+pm=apm一座吃喝玩乐应有尽有的商场网红小吃真的不少,奈雪的茶最爱她家各种水果味的冰... 2020-02-15 10:18:00   \n",
+       "7519   已经习惯了前两年北京过年人少，,今年烟火气终于回来了，旺旺旺！,大楼以前是过年大家买糖的地方... 2023-01-29 21:36:00   \n",
        "...                                                  ...                 ...   \n",
-       "3241   听说东安市场要升级，产品都在促销今天特意过来看看有没有漏可捡的。人还是不少，一楼有服装和鞋特... 2020-09-26 08:42:00   \n",
-       "8770   大年初四顶着门儿进去的。先是去的和平菓局。参观完后就去的楼上，楼上顾客不是很多。还有他家自己... 2021-02-19 09:31:00   \n",
-       "10182  东方新天地从拿地、设计、施工到开门迎宾，充满了传奇和故事，也是王府井-东单黄金区域的地标。其... 2022-05-05 10:49:00   \n",
-       "4756   王府中環人气回升太快了，一组迎圣诞的圣诞树造型吸引了很多人驻足欣赏，合影拍照留念。各个餐厅开... 2022-12-24 18:36:00   \n",
-       "53     北京apm是知名地标之一。每次去都会发现一些变化，像川绝变脸一样，熟悉中有陌生，如首次出现在... 2023-04-05 20:35:00   \n",
+       "3035   听说东安市场要升级，产品都在促销今天特意过来看看有没有漏可捡的。人还是不少，一楼有服装和鞋特... 2020-09-26 08:42:00   \n",
+       "8122   大年初四顶着门儿进去的。先是去的和平菓局。参观完后就去的楼上，楼上顾客不是很多。还有他家自己... 2021-02-19 09:31:00   \n",
+       "49     北京apm是知名地标之一。每次去都会发现一些变化，像川绝变脸一样，熟悉中有陌生，如首次出现在... 2023-04-05 20:35:00   \n",
+       "9436   东方新天地从拿地、设计、施工到开门迎宾，充满了传奇和故事，也是王府井-东单黄金区域的地标。其... 2022-05-05 10:49:00   \n",
+       "4444   王府中環人气回升太快了，一组迎圣诞的圣诞树造型吸引了很多人驻足欣赏，合影拍照留念。各个餐厅开... 2022-12-24 18:36:00   \n",
        "\n",
        "        from  \n",
-       "11013  东方新天地  \n",
-       "6846    王府中環  \n",
-       "4327   北京apm  \n",
-       "6560    王府中環  \n",
-       "2633   北京apm  \n",
+       "10211  东方新天地  \n",
+       "6333    王府中環  \n",
+       "6078    王府中環  \n",
+       "4036   北京apm  \n",
+       "7519   王府井百货  \n",
        "...      ...  \n",
-       "3241   北京apm  \n",
-       "8770   王府井百货  \n",
-       "10182  东方新天地  \n",
-       "4756    王府中環  \n",
-       "53     北京apm  \n",
+       "3035   北京apm  \n",
+       "8122   王府井百货  \n",
+       "49     北京apm  \n",
+       "9436   东方新天地  \n",
+       "4444    王府中環  \n",
        "\n",
-       "[2711 rows x 7 columns]"
+       "[2453 rows x 7 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Define values to skip\n",
+    "# define values to skip\n",
     "to_skip = ['匿名用户', '【已注销用户】']\n",
     "\n",
-    "# Find duplicated rows\n",
-    "not_skipped = ~df['user_name'].isin(to_skip) # create a boolean Series of values to skip\n",
-    "duplicated_rows = df[not_skipped].duplicated(subset=['user_name'], keep=False) # find duplicated rows\n",
-    "duplicate_df = df[not_skipped][duplicated_rows] # select only duplicated rows that are not skipped\n",
+    "# create boolean Series of values to skip\n",
+    "not_skipped = ~df['user_name'].isin(to_skip)\n",
     "\n",
-    "# Print duplicated rows\n",
-    "duplicate_df.sort_values(by='user_name') # sort and print duplicated rows"
+    "# find duplicated rows\n",
+    "duplicated_rows = df[not_skipped].duplicated(subset=['user_name'], keep=False)\n",
+    "\n",
+    "# select only duplicated rows that are not skipped\n",
+    "duplicate_df = df[not_skipped][duplicated_rows]\n",
+    "\n",
+    "# sort and print duplicated rows\n",
+    "duplicate_df = duplicate_df.sort_values(by='user_name')\n",
+    "\n",
+    "duplicate_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "9313b9b7",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user_name\n",
+      "一米阳光        5\n",
+      "小米          5\n",
+      "jessiefp    4\n",
+      "阳光          4\n",
+      "风景          4\n",
+      "           ..\n",
+      "卡沙巴王子1      2\n",
+      "卤面666       2\n",
+      "原来是猪猪ya     2\n",
+      "双子星_559     2\n",
+      "对方正在向你呲牙    2\n",
+      "Length: 1080, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count the occurrences for each duplicated user_name\n",
+    "occurrences = duplicate_df.groupby('user_name').size()\n",
+    "\n",
+    "# sort and print the counts of occurrences\n",
+    "occurrences = occurrences.sort_values(ascending=False)\n",
+    "print(occurrences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "9e765c3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3566     团购了这张券是真的超级划算了，50元抵100元花，去了西单大悦城的一家餐馆吃饭，貌似叫鹿港小...\n",
+      "6379     位于王府井大街的中环广场整体购物环境真不错！人非常少，品牌店很多：大牌，轻奢，运动品牌都不少...\n",
+      "7984     百货大楼的江湖地位那是不得了，那是全国人民的百货大楼哈……,不过由于各种原因，北京人逛百货大...\n",
+      "8889     北京王府井北京市百货大楼，应该是北京最老的商场了，建筑很有古典特色，算是钟楼吧，有时针，去的...\n",
+      "10481    很久没有来东方广场了，今天路过来看看，硬件保持的还是挺好的，里面加了好多珠宝品牌，珠宝什么时...\n",
+      "Name: review, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find all rows with user_name \"一米阳光\"\n",
+    "rows = df[df['user_name'] == '一米阳光']['review']\n",
+    "\n",
+    "# print the rows\n",
+    "print(rows)"
    ]
   },
   {
@@ -1105,7 +1191,7 @@
    "id": "2bea1995",
    "metadata": {},
    "source": [
-    "After inspection, there is no violation of these comment data, so it will be retained"
+    "### After inspection, there is no violation and malicious comment, so it will be retained."
    ]
   },
   {
@@ -1118,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "2347acc3",
    "metadata": {},
    "outputs": [],
@@ -1128,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "8f1c85a7",
    "metadata": {},
    "outputs": [
@@ -1171,7 +1257,7 @@
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>特别赞的一家商场，在王府井这个商场云集和大牌云集的地方，apm商场算是人气特别高的了。\\n交...</td>\n",
+       "      <td>特别赞的一家商场，在王府井这个商场云集和大牌云集的地方，apm商场算是人气特别高的了。,交通...</td>\n",
        "      <td>2023-04-17 23:12:00</td>\n",
        "      <td>北京apm</td>\n",
        "    </tr>\n",
@@ -1193,7 +1279,7 @@
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>北京apm \\n东城区商场热门榜第一名☝️🥇\\n王府井大街138号\\n环境：商场环境干净整齐...</td>\n",
+       "      <td>北京apm,东城区商场热门榜第一名☝️🥇,王府井大街138号,环境：商场环境干净整齐，布局分...</td>\n",
        "      <td>2023-04-17 21:05:00</td>\n",
        "      <td>北京apm</td>\n",
        "    </tr>\n",
@@ -1215,7 +1301,7 @@
        "      <td>4.5</td>\n",
        "      <td>4.5</td>\n",
        "      <td>4.5</td>\n",
-       "      <td>花·Young 的年华……\\n2023年3🈷️31日～～5月3日，北京apm首层中庭，迎来7...</td>\n",
+       "      <td>花·Young的年华……,2023年3🈷️31日～～5月3日，北京apm首层中庭，迎来7位艺...</td>\n",
        "      <td>2023-04-16 21:47:00</td>\n",
        "      <td>北京apm</td>\n",
        "    </tr>\n",
@@ -1232,11 +1318,11 @@
        "4       樱桃子         4.5         4.5         4.5        4.5   \n",
        "\n",
        "                                              review                time  \\\n",
-       "0  特别赞的一家商场，在王府井这个商场云集和大牌云集的地方，apm商场算是人气特别高的了。\\n交... 2023-04-17 23:12:00   \n",
+       "0  特别赞的一家商场，在王府井这个商场云集和大牌云集的地方，apm商场算是人气特别高的了。,交通... 2023-04-17 23:12:00   \n",
        "1  LINLEE在王府井apm也开新店了，超级喜欢他们家的口味，和朋友逛街无意看到的，果断去买一... 2023-04-17 21:22:00   \n",
-       "2  北京apm \\n东城区商场热门榜第一名☝️🥇\\n王府井大街138号\\n环境：商场环境干净整齐... 2023-04-17 21:05:00   \n",
+       "2  北京apm,东城区商场热门榜第一名☝️🥇,王府井大街138号,环境：商场环境干净整齐，布局分... 2023-04-17 21:05:00   \n",
        "3  一定要错过下午5点半以后，不然吃饭只能排队等半个小时，而且拿到号了一定别因为还有十几桌就走开... 2023-04-17 10:19:00   \n",
-       "4  花·Young 的年华……\\n2023年3🈷️31日～～5月3日，北京apm首层中庭，迎来7... 2023-04-16 21:47:00   \n",
+       "4  花·Young的年华……,2023年3🈷️31日～～5月3日，北京apm首层中庭，迎来7位艺... 2023-04-16 21:47:00   \n",
        "\n",
        "    from  \n",
        "0  北京apm  \n",
@@ -1246,7 +1332,7 @@
        "4  北京apm  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "a132b51a",
    "metadata": {},
    "outputs": [],
@@ -1302,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "0403b15d",
    "metadata": {},
    "outputs": [],
